SOHO-6025 put ellipsis to avoid for text to overlap with drop-arrow

--- a/components/datagrid/_datagrid.scss
+++ b/components/datagrid/_datagrid.scss
@@ -2262,6 +2262,13 @@ td .btn-actions {
     display: inline-block;
     text-align: left;
     width: calc(100% - 10px);
+
+    &.dropdown-trigger {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      vertical-align: middle;
+    }
   }
 
   &:not(.is-readonly):not(.error):hover,
